--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css"
   rel="stylesheet"
 />
-    <title>React App</title>
+    <title>ESD</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
